Bug 484932 Printing Sun Java System Communications Express page caused a crash [@ moz_drawingarea_resize] r=roc