widget/src/gtk2/nsWindow.cpp
@@ -4150,7 +4150,9 @@ nsWindow::NativeResize(PRInt32 aWidth, PRInt32 aHeight, PRBool  aRepaint)
         gtk_widget_size_allocate(GTK_WIDGET(mContainer), &allocation);
     }
 
-    moz_drawingarea_resize (mDrawingarea, aWidth, aHeight);
+    if (mDrawingarea) {
+        moz_drawingarea_resize (mDrawingarea, aWidth, aHeight);
+    }
 }
 
 void
